Thu Jul 15 14:02:04 2004  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:

          Cleaned up the code a bit.

        * modules/AutomakeWorkspaceCreator.pm:

          Used a parameter passed into write_comps to determine if we are
          writing the top level workspace.

        * modules/ProjectCreator.pm:

          Ignore project names that are set in a base project.  It doesn't
          make sense and I can't think of a practical use of this.

        * modules/WorkspaceCreator.pm:

          Fixed a bug where an excluded name could be partially matched and
          possibly exclude something that wasn't meant to be.

Thu Jul  8 14:09:49 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:
        * modules/ProjectCreator.pm:

          Added a new wild card syntax ('^') similar to the '!' that works
          best for excluding generated files from component lists.  See the
          README for more details.

Thu Jul  8 09:16:21 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Added documentation about the wild card support in MPC.

        * modules/ProjectCreator.pm:

          If grouping is used in source files, put automatically added files
          in corresponding groups.

        * templates/vc7.mpd:

          Use <%ucw()%> for the custom_type which looks better in the
          graphical interface.

Tue Jul  6 11:29:07 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Added documentation for new pseudo template variables for use
          within the command, commandflags, postcommand and output_option
          settings.

        * modules/ProjectCreator.pm:

          Fixed a bug where mixing grouped and non-grouped files would cause
          the non-grouped files to be ignored.

          Added new pseudo template variables for the null device, >, <, &&
          and ||.

        * modules/VC7ProjectCreator.pm:
