@@ -1,3 +1,9 @@
+Fri Jul 16 12:24:36 2004  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/WorkspaceCreator.pm:
+
+          Added a method to get the current output file name.
+
 Thu Jul 15 14:02:04 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * clone_build_tree.pl:
